--- a/css/design.css
+++ b/css/design.css
@@ -8,37 +8,71 @@ body{
 header{
     width: 100%;
     height: 35px;
-    background: #233d58;
+    background: #b1cae4;
     position: relative;
 }
 header h1{
     display: none;
 }
-header nav{
-    display: none;
+header nav .ioMenuMovil{
+    height: 25px;
+    width: 120px;
+    cursor: pointer;
+    line-height: 40px;
+    margin: 0px 0px 0px 10px;
+    padding-top: 5px;
 }
+header nav .ioMenuMovil img{
+    width: 100%;
+}
+
+header nav #card_menu{   /*Pendiente corregir ajustar las imagenes*/
+    position: relative;
+    width: 230px;
+    height: 500px;
+    background: white;
+    top: -30px;
+    left: 0px;
+    border-right: 3px solid #afaeae;
+    z-index: 999;
+    padding-bottom: 50px;
+}
+header nav #card_menu #logo_menu_cat{
+    height: 200px;
+    width: 80%;
+    margin: 30px, 0px;
+    margin-left: 10%;
+    margin-bottom: 50px;
+}
+header nav #card_menu #logo_menu_cat img{
+    width: 100%;
+}
+header nav #card_menu ul{
+    background: red ;
+
+}
+
 header #previa_section,
 header #next_section{
-    width: 30px;
-    height: 30px;
-    background: pink;
+    width: 25px;
+    height: 25px;
     cursor: pointer;
-    /*overflow: hidden;*/
+    overflow: hidden;
     margin: 5px;
     position: absolute;
     top: 0px;
 }
 header #previa_section{
-    right: 25px;
+    right: 35px;
 }
 header #next_section{
-    right: 2px;
+    right: 5px;
 }
 header #previa_section img,
-header #next_section img {
+header #next_section img{
     width: 150%;
-    top: -8px;
-    left: -8px;
+    top: -6px;
+    left: -6px;
     position: relative;
 }
 header #next_section img{
@@ -56,10 +90,39 @@ header #next_section img{
     body{
         background: rgb(144, 179, 74);
     }
+    header{
+        height: 50px;
+    }
+    header h1{
+        display: inline-block;
+        width: 20%;
+
+        margin: 0;
+        height: 50px;
+        margin-left: 80px;
+        line-height: 50px;
+        min-width: 200px;
+    }
+    header h1 > *{
+        display: inline-block;
+        vertical-align: middle;
+        text-decoration: none;
+        color: white;
+        font-size: 0.8em;
+        margin: 0px 3px;
+    }
+    header h1 figure{
+        height: 40px;
+        width: 40px;
+        margin: 0px;
+    }
+    header h1 figure img{
+        width: 100%;
+    }
     header #previa_section,
     header #next_section{
         position: absolute;
-        width: 50%;
+        width: 50px;
         height: 50px;
         background: #29abe2;
         right: 40px;
