--- a/css/design.css
+++ b/css/design.css
@@ -1,6 +1,6 @@
 body{
     font-size: 16px;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Merriweather' sans-serif;
     background: #233d58;
     position: relative;
 }
@@ -8,7 +8,7 @@ body{
 header{
     width: 100%;
     height: 35px;
-    background: #b1cae4;
+    background: #233d58;
     position: relative;
 }
 header h1{
@@ -23,13 +23,11 @@ header nav .ioMenuMovil{
     padding-top: 5px;
 }
 header nav .ioMenuMovil img{
-    width: 1000%;
+    height: 100%;
 }
-
-header nav #card_menu{   /*Pendiente corregir ajustar las imagenes*/
+header nav #card_menu{
     position: relative;
     width: 230px;
-    height: 500px;
     background: white;
     top: -30px;
     left: 0px;
@@ -37,10 +35,11 @@ header nav #card_menu{   /*Pendiente corregir ajustar las imagenes*/
     z-index: 999;
     padding-bottom: 50px;
 }
+
 header nav #card_menu #logo_menu_cat{
     height: 200px;
     width: 80%;
-    margin: 30px, 0px;
+    margin: 30px 0px;
     margin-left: 10%;
     margin-bottom: 50px;
 }
@@ -48,8 +47,16 @@ header nav #card_menu #logo_menu_cat img{
     width: 100%;
 }
 header nav #card_menu ul{
-    background: red ;
-
+    margin-top: -20px;
+}
+header nav #card_menu ul li{
+    list-style: none;
+    font-size: 1.5em;
+    line-height: 37px;
+}
+header nav #card_menu ul li a{
+    text-decoration: none;
+    color: black;
 }
 
 header #previa_section,
@@ -57,10 +64,10 @@ header #next_section{
     width: 25px;
     height: 25px;
     cursor: pointer;
-    overflow: hidden;
     margin: 5px;
     position: absolute;
     top: 0px;
+    overflow: hidden;
 }
 header #previa_section{
     right: 35px;
@@ -70,9 +77,9 @@ header #next_section{
 }
 header #previa_section img,
 header #next_section img{
-    width: 150%;
-    top: -6px;
-    left: -6px;
+    width: 250%;
+    top: -19px;
+    left: -19px;
     position: relative;
 }
 header #next_section img{
@@ -81,44 +88,88 @@ header #next_section img{
 
 
 @media screen and (min-width:480px){
-
+    body{
+        background: #afaeae;
+    }
 }
 @media screen and (min-width:600px){
-
+    body{
+        background: orange;
+    }
 }
 @media screen and (min-width:767px){
     body{
-        background: rgb(144, 179, 74);
+        background: yellow;
     }
     header{
-        height: 50px;
+        height: 55px;
     }
     header h1{
         display: inline-block;
-        width: 20%;
-
+        width: 30%;
         margin: 0;
         height: 50px;
-        margin-left: 80px;
+        margin-left: 40px;
         line-height: 50px;
-        min-width: 200px;
+        min-width: 100px;
     }
     header h1 > *{
         display: inline-block;
         vertical-align: middle;
         text-decoration: none;
         color: white;
-        font-size: 0.8em;
-        margin: 0px 3px;
+        font-size: 0.6em;
+        margin: 0px 2px;
     }
     header h1 figure{
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 45px;
         margin: 0px;
     }
     header h1 figure img{
         width: 100%;
     }
+
+    header nav{
+        display: inline-block;
+        vertical-align: middle;
+        width: 62%;
+        position: relative;
+    }
+    header nav #showMenu,
+    header nav #hideMenu{
+        display: none;
+    }
+    header nav #card_menu{
+        display: inline-block;
+        border: none;
+        background: none;
+        position: relative;
+        top: 0px;
+        width: 100%;
+        text-align: right;
+        padding-bottom: 0px;
+    }
+
+    header nav #card_menu figure{
+        display: none;
+    }
+    header nav #card_menu ul{
+        padding: 0px;
+        margin: 0px;
+        margin-top: -15px;
+    }
+    header nav #card_menu ul li{
+        display: inline-block;
+        width: 80px;
+        text-align: center;
+        font-size: 1.1em;
+        margin: 0px -2px;
+    }
+    header nav #card_menu ul li a{
+        color: white;
+    }
+
     header #previa_section,
     header #next_section{
         position: absolute;
@@ -129,6 +180,7 @@ header #next_section img{
         z-index: 999;
         border-radius: 50%;
     }
+
     header #previa_section{
         top: 115px;
     }
@@ -144,5 +196,7 @@ header #next_section img{
 
 }
 @media screen and (min-width:950px){
-
+    body{
+        background:green;
+    }
 }
