--- a/css/design.css
+++ b/css/design.css
@@ -1,7 +1,6 @@
 body{
     font-size: 16px;
-    font-family: 'Merriweather' sans-serif;
-    background: #233d58;
+    font-family: 'Merriweather', sans-serif;
     position: relative;
 }
 
@@ -265,6 +264,56 @@ header #next_section img{
     font-size: 3.5em;
     top: -3px;
     left: 6px;
+}
+
+footer{
+    width: 100%;
+    background: black;
+    color: white;
+    text-align: center;
+    z-index: 90;
+    height: 150px;
+    position: fixed;
+    bottom: 0px;
+}
+footer .rrss{
+    margin-top: 70px;
+    width: 100%;
+    height: 40px;
+}
+footer .rrss a{
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    position: relative;
+}
+footer .rrss a:before{
+    color: white;
+    text-decoration: none;
+    position: absolute;
+    font-size: 2em;
+    top: 5px;
+    left: 5px;
+    font-family: 'icomoon';
+
+}
+footer .rrss a:nth-child(1):before{
+    content: "\ea91";
+}
+footer .rrss a:nth-child(2):before{
+    content: "\ea91";
+}
+footer .rrss a:nth-child(3):before{
+    content: "\ea91";
+}
+footer .rrss a:nth-child(4):before{
+    content: "\ea91";
+}
+
+footer p{
+    font-size: 0.7em;
+    font-weight: lighter;
+    font-family: 'AbrilFatface';
 }
 
 @media screen and (min-width:480px){
